# darwpy

./: .gitignore  README.md  README.rst  setup.cfg
docs/: conf.py  generate_doc.sh  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: darwpy.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/source/: modules.rst.txt
docs/_build/html/source/: darwpy.html  modules.html
docs/source/: darwpy.rst
examples/: ex1.py  ex2.py  problems.py  quick_example.py  run_examples-Firefly.ipynb  run_examples-GA.ipynb
src/darwpy/: __init__.py  algos.py  firefly.py  operators.py  problems.py
src/darwpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: .coverage  test_evolver.py
