[metadata]
name = darwpy
version = 0.0.1
license = MIT
description = A package for optimisation
long_description = file: README.md
author = Andreas Kranis
author_email = ...
classifiers=
   optimization
   genetic algorithms
   Topic :: Scientific/Engineering :: Mathematics   

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   numpy
   tqdm

[options.packages.find]
where=src